--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "css-loader": "^0.26.1",
     "css-modules-require-hook": "^4.0.5",
     "enzyme": "^2.7.1",
+    "eslint": "^3.14.1",
+    "eslint-config-defaults": "^9.0.0",
+    "eslint-loader": "^1.6.1",
     "jsdom": "^9.9.1",
     "mocha": "^3.2.0",
     "node-sass": "^4.3.0",
